--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "\"# jk\"",
   "main": "index.js",
   "scripts": {
-    "start": "index app.js"
+    "start": "node index.js"
   },
   "keywords": [],
   "author": "",
